[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprite/chooser_buttons/chooser_popup.png" type="Texture" id=1]
[ext_resource path="res://assets/sprite/chooser_buttons/chooser_button.png" type="Texture" id=2]
[ext_resource path="res://components/radial_menu/CooldownButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/radial_menu/RadialMenuButton.gd" type="Script" id=11]

[sub_resource type="InputEventAction" id=1]
action = "ui_focus_next"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="RadialMenuButton" type="TextureButton"]
margin_right = 32.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 2 )
script = ExtResource( 11 )

[node name="Buttons" type="Control" parent="."]
grow_horizontal = 2
grow_vertical = 2

[node name="ColorButton1" parent="Buttons" instance=ExtResource( 5 )]
margin_left = -4.0
margin_top = 4.0
margin_right = 508.0
margin_bottom = 516.0
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 1 )

[node name="ColorButton2" parent="Buttons" instance=ExtResource( 5 )]
margin_left = 4.0
margin_top = 10.0
margin_right = 516.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 1 )

[node name="Colorbutton3" parent="Buttons" instance=ExtResource( 5 )]
margin_left = -2.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 1 )

[node name="Colorbutton4" parent="Buttons" instance=ExtResource( 5 )]
margin_left = -8.0
margin_top = 4.0
margin_right = 504.0
margin_bottom = 516.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HoldTimer" type="Timer" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_HoldTimer_timeout"]
